--- a/en/愩/愩.15676.wikitext
+++ b/en/愩/愩.15676.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=10|sn=13|four=9108<sub>6</sub>|canj=心一月金 (PMBC), X心一月金 (XPMBC)}}
+{{Han char|rn=61|rad=心|as=10|sn=13|four=9108<sub>6</sub>|canj=心一月金 (PMBC), X心一月金 (XPMBC)|ids=⿰[[忄]][[貢]]}}
 
 # {{defn|Han|sort=心10}}
 
