--- a/en/愩/愩.15676.wikitext
+++ b/en/愩/愩.15676.wikitext
@@ -10,12 +10,21 @@
 
 ----
 
-==Mandarin==
+==Chinese==
+{{zh-hanzi-box|[[愩]]}}
 
-===Hanzi===
-{{cmn-hanzi|pin=[[gōng]] ([[gong1]])|wg=kung<sup>1</sup>}}
+===Pronunciation===
+{{zh-pron
+|m=gōng
+|c=gung1
+|mc=y
+|oc=y
+|ma=
+|cat=
+}}
 
-# {{defn|lang=cmn|sort=心10}}
+====References====
+* (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 109]
 
 [[fr:愩]]
 [[ko:愩]]
