--- a/en/愩/愩.15676.wikitext
+++ b/en/愩/愩.15676.wikitext
@@ -26,6 +26,18 @@
 ====References====
 * (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 109]
 
+----
+
+==Vietnamese==
+
+===Han character===
+{{vi-readings|rs=心10| hanviet = ngúng}}
+
+# {{defn|lang=vi|sort=心10}}
+
+====References====
+*[http://nomfoundation.org/common/nom_details.php?codepoint=6129 Nom Foundation]
+
 [[fr:愩]]
 [[ko:愩]]
 [[li:愩]]
