--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -13,46 +13,46 @@ The noun is from {{etyl|enm|en}} {{term|pleye|lang=enm}}, from {{etyl|ang|en}} {
 ===Verb===
 {{en-verb}}
 
-# {{context|intransitive|lang=en}} To act in a manner such that one has [[fun]]; to engage in activities expressly for the purpose of [[recreation]].
+# {{label|en|intransitive}} To act in a manner such that one has [[fun]]; to engage in activities expressly for the purpose of [[recreation]].
+#: {{ux|en|They '''played''' long and hard.}}
 #* '''2001''', Annabelle Sabloff, ''Reordering the Natural World'', Univ. of Toronto Press, page 83:
-#*: A youngster''...''listed some of the things his pet did not do<!--''...''-->: ''...''go on vacation, '''play''' in the same way that he did with his friends, and so on.
+#*: A youngster{{...}}listed some of the things his pet did not do<!--''...''-->:{{...}}go on vacation, '''play''' in the same way that he did with his friends, and so on.
 #* '''2003''', Anne-Nelly Perret-Clermont et al. (eds.), ''Joining Society: Social Interaction and Learning in Adolescence and Youth'', Cambridge Univ. Press, page 52:
 #*: We had to play <!--[drums]--> for an hour, so that meant that we didn't have time to '''play''' and joke around.
-#: {{usex|lang=en|They '''played''' long and hard.}}
-# <!--is this sense obsolete?--> {{context|intransitive|lang=en}} To take part in [[amorous]] activity; to [[make love]], [[fornicate]]; to [[have sex]].
+# <!--is this sense obsolete?--> {{label|en|intransitive}} To take part in [[amorous]] activity; to [[make love]], [[fornicate]]; to [[have sex]].
 #* '''1590''', {{w|Edmund Spenser}}, ''{{w|The Faerie Queene}}'', II.iv:
 #*: Her proper face / I not descerned in that darkesome shade, / But weend it was my loue, with whom he '''playd'''.
-# {{context|ergative|lang=en}} To perform in (a sport); to participate in (a game).
-#: {{usex|lang=en|he '''plays''' on three teams;&nbsp;who's '''playing''' now?}}
-#: {{usex|lang=en|'''play''' football;&nbsp; '''play''' sports;&nbsp; '''play''' games}}
-# {{context|transitive|lang=en}} To compete against, in a game.
+# {{label|en|ergative}} To perform in (a sport); to participate in (a game).
+#: {{ux|en|he '''plays''' on three teams;&emsp; who's '''playing''' now?}}
+#: {{ux|en|'''play''' football;&emsp; '''play''' sports;&emsp; '''play''' games}}
+# {{label|en|transitive}} To compete against, in a game.
 #* {{quote-news|year=2011|date=November 12|work=BBC Sport
 |title=[http://news.bbc.co.uk/sport2/hi/football/15693231.stm International friendly: England 1-0 Spain]
 |passage=England will not be catapulted among the favourites for Euro 2012 as a result of this win, but no victory against Spain is earned easily and it is right they take great heart from their efforts as they now prepare to '''play''' Sweden at Wembley on Tuesday.}}
-# {{context|transitive|lang=en}} To act as the indicated role, especially in a performance.
+# {{label|en|transitive}} To act as the indicated role, especially in a performance.
+#: {{ux|en|He '''plays''' the King, and she's the Queen.}}
+#: {{ux|en|No part of the brain '''plays''' the role of permanent memory.}}
 #* {{quote-magazine|year=2013|month=May-June|author=[http://www.americanscientist.org/authors/detail/katrina-g-claw Katrina G. Claw]
 |title=[http://www.americanscientist.org/issues/feature/2013/3/rapid-evolution-in-eggs-and-sperm Rapid Evolution in Eggs and Sperm]
 |volume=101|issue=3|magazine={{w|American Scientist}}
 |passage=In plants, the ability to recognize self from nonself '''plays''' an important role in fertilization, because self-fertilization will result in less diverse offspring than fertilization with pollen from another individual.}}
-#: {{usex|lang=en|He '''plays''' the King, and she's the Queen.}}
-#: {{usex|lang=en|No part of the brain '''plays''' the role of permanent memory.}}
-# {{context|intransitive|of a|theatrical performance|lang=en}} To be performed; {{context|or|of a|film|lang=en}} to be shown.
-#: ''His latest film is '''playing''' in the local theatre tomorrow.''
-# {{context|transitive|of a|theatrical company|or|band|etc|lang=en}} To perform in or at; to give performances in or at.
+# {{label|en|intransitive|of a|theatrical performance}} To be performed; {{label|en|or|of a|film}} to be shown.
+#: {{ux|en|His latest film is '''playing''' in the local theatre tomorrow.}}
+# {{label|en|transitive|of a|theatrical company|or|band|etc.}} To perform in or at; to give performances in or at.
 #* '''2008''', ''My Life: From Normandy to Hockeytown'' (ISBN 0966412087), page 30:
 #*: I got a hold of Louis (Satchmo) Armstrong's agent and I explained to him on the phone that, "I know you're '''playing''' London on Wednesday night. Why don't you come and '''play''' the Arena in Windsor on Saturday night?"
-# {{context|transitive|intransitive|lang=en}} To produce music.
-## {{context|intransitive|of a|musical instrument|lang=en}} To produce music.
+# {{label|en|transitive|intransitive}} To produce music.
+## {{label|en|intransitive|of a|musical instrument}} To produce music.
 ##* '''2007''', Dan Erlewine, ''Guitar Player Repair Guide'' (ISBN 0879309210), page 220:
 ##*: If your guitar '''plays''' well on fretted strings but annoys you on the open ones, the nut's probably worn out.
-## {{context|intransitive|especially|of a|person|lang=en}} To produce music using a musical instrument.
-##: {{usex|lang=en|I've practiced the piano off and on, and I still can't '''play''' very well.}}
-## {{context|transitive|especially|of a|person|lang=en}} To produce music (or a specified song or musical style) using (a specified musical instrument).
-##: {{usex|lang=en|I'll '''play''' the piano and you sing;&nbsp; can you '''play''' an instrument?}}
-##: {{usex|lang=en|we especially like to '''play''' jazz together;&nbsp; '''play''' a song for me;&nbsp; do you know how to '''play''' Für Elise?;&nbsp; my son thinks he can '''play''' music}}
-# {{context|transitive|ergative|lang=en}} To use a device to watch or listen to the indicated recording.
-#: {{usex|lang=en|You can '''play''' the DVD now.}}
-# {{context|copulative|lang=en}} Contrary to fact, to give an appearance of being.
+## {{label|en|intransitive|especially|of a|person}} To produce music using a musical instrument.
+##: {{ux|en|I've practiced the piano off and on, and I still can't '''play''' very well.}}
+## {{label|en|transitive|especially|of a|person}} To produce music (or a specified song or musical style) using (a specified musical instrument).
+##: {{ux|en|I'll '''play''' the piano and you sing;&emsp; can you '''play''' an instrument?}}
+##: {{ux|en|we especially like to '''play''' jazz together;&emsp; '''play''' a song for me;&emsp; do you know how to '''play''' Für Elise?;&emsp; my son thinks he can '''play''' music}}
+# {{label|en|transitive|ergative}} To use a device to watch or listen to the indicated recording.
+#: {{ux|en|You can '''play''' the DVD now.}}
+# {{label|en|copulative}} Contrary to fact, to give an appearance of being.
 #* {{rfdate}} Sir {{w|Walter Scott}}
 #*: Thou canst '''play''' the rational if thou wilt.
 #* '''1985''', Sharon S Brehm, ''Intimate Relationships'':
@@ -61,33 +61,32 @@ The noun is from {{etyl|enm|en}} {{term|pleye|lang=enm}}, from {{etyl|ang|en}} {
 #*: Now, surveying his final link, he had the nice advantage of being able to '''play''' coy with established port cities that desperately wanted his proven railroad.
 #* '''2003''', John U. Ogbu, ''Black American Students in an Affluent Suburb: A Study of Academic Disengagement'', page 194:
 #*: Instead, they '''played''' dumb, remained silent, and did their classwork.
-# {{context|intransitive|lang=en}} To act with levity or thoughtlessness; to trifle; to be careless.
+# {{label|en|intransitive}} To act with levity or thoughtlessness; to trifle; to be careless.
 #* {{rfdate}} Sir {{w|W. Temple}}:
 #*: Men are apt to '''play''' with their healths.
-# {{context|intransitive|lang=en}} To act; to behave; to practice deception.
+# {{label|en|intransitive}} To act; to behave; to practice deception.
 #* {{rfdate}} {{w|Shakespeare}}:
 #*: His mother '''played''' false with a smith.
-# {{context|intransitive|lang=en}} To move in any manner; especially, to move regularly with alternate or reciprocating motion; to operate.
-#: ''The fountain '''plays'''.''
+# {{label|en|intransitive}} To move in any manner; especially, to move regularly with alternate or reciprocating motion; to operate.
+#: {{ux|en|The fountain '''plays'''.}}
 #* {{rfdate}} {{w|Cheyne}}:
 #*: The heart beats, the blood circulates, the lungs '''play'''.
-# {{context|intransitive|lang=en}} To move gaily; to disport.
+# {{label|en|intransitive}} To move gaily; to disport.
 #* {{rfdate}} {{w|Shakespeare}}:
 #*: even as the waving sedges '''play''' with wind
 #* {{rfdate}} {{w|Addison}}:
 #*: The setting sun / '''Plays''' on their shining arms and burnished helmets.
 #* {{rfdate}} {{w|Alexander Pope}}:
 #*: All fame is foreign but of true desert, / '''Plays''' round the head, but comes not to the heart.
-# {{context|transitive|lang=en}} To put in action or motion.
-#: ''to '''play''' cannon upon a fortification''
-#: ''to '''play''' a trump in a card game''
-# {{context|transitive|lang=en}} To bring into sportive or wanton action; to exhibit in action; to execute.
-#: ''to '''play''' tricks''
+# {{label|en|transitive}} To put in action or motion.
+#: {{ux|en|to '''play''' cannon upon a fortification;&emsp; to '''play''' a trump in a card game}}
+# {{label|en|transitive}} To bring into sportive or wanton action; to exhibit in action; to execute.
+#: {{ux|en|to '''play''' tricks}}
 #* {{rfdate}} {{w|John Milton}}:
 #*: Nature here / Wantoned as in her prime, and '''played''' at will / Her virgin fancies.
-# {{context|transitive|lang=en}} To act or perform (a play).
-#: ''to '''play''' a comedy''
-# {{context|transitive|lang=en}} To keep in play, as a [[hook]]ed [[fish]], in order to [[land]] it.
+# {{label|en|transitive}} To act or perform (a play).
+#: {{ux|en|to '''play''' a comedy}}
+# {{label|en|transitive}} To keep in play, as a [[hook]]ed [[fish]], in order to [[land]] it.
 
 ====Translations====
 {{trans-top|act in a manner such that one has fun}}
