--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -71,6 +71,9 @@ The noun is from {{etyl|enm|en}} {{term|pleye|lang=enm}}, from {{etyl|ang|en}} {
 #: {{ux|en|The fountain '''plays'''.}}
 #* {{rfdate}} {{w|George Cheyne (physician)|George Cheyne}} (1671-1743):
 #*: The heart beats, the blood circulates, the lungs '''play'''.
+#*{{quote-book|year=1908|author=[http://openlibrary.org/authors/OL2430852A W. B. M. Ferguson]
+|title=[http://books.google.com/books?id=NeBqnQEACAAJ Zollenstein]|chapter=1
+|passage=The colonel and his sponsor made a queer contrast: Greystone [the sponsor] long and stringy, with a face that seemed as if a cold wind was eternally '''playing''' on it.}}
 # {{label|en|intransitive}} To move gaily; to disport.
 #* {{rfdate}} {{w|William Shakespeare}} (1564-1616):
 #*: even as the waving sedges '''play''' with wind
