--- a/en/b/bone marrow.7397.wikitext
+++ b/en/b/bone marrow.7397.wikitext
@@ -12,7 +12,7 @@
 ====Translations====
 {{trans-top|bone marrow}}
 * Arabic: {{t|ar|نقي العظم|m|tr=niqy al-3aZm}}, {{t|ar|نخاع العظم|m|tr=nujaa3 al-3aZm}}, {{t|ar|نقي|m|tr=niqy}}
-* [[Catalan]]: {{t+|ca|bessó|m}}
+* [[Catalan]]: {{t|ca|medul·la òssia|f}}, {{t+|ca|bessó|m}}
 * Chinese:
 *: Mandarin: {{t+|cmn|骨髓|tr=gǔsuǐ|sc=Hani}}
 * Czech: {{t+|cs|kostní dřeň|f}}
