--- a/en/愪/愪.15677.wikitext
+++ b/en/愪/愪.15677.wikitext
@@ -10,6 +10,24 @@
 
 ----
 
+==Chinese==
+{{zh-hanzi-box|[[愪]]}}
+
+===Pronunciation===
+{{zh-pron
+|m=yún
+|c=wan4
+|mc=y
+|oc=y
+|ma=
+|cat=
+}}
+
+====References====
+* (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 109]
+
+----
+
 ==Japanese==
 
 ===Kanji===
@@ -19,15 +37,6 @@
 
 ====Readings====
 * {{ja-readings|on=[[うん]] (un), [[いん]] (in)|kun=[[うれえるさま]] (ureerusama), [[うごく]] (ugoku), [[うれえる]] (ureeru)}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[yún]] ([[yun2]])|wg=yün<sup>2</sup>}}
-
-# {{defn|lang=cmn|sort=心10}}
 
 [[fr:愪]]
 [[li:愪]]
