--- a/en/愫/愫.15678.wikitext
+++ b/en/愫/愫.15678.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=10|sn=13|four=9509<sub>3</sub>|canj=心手一火 (PQMF)}}
+{{Han char|rn=61|rad=心|as=10|sn=13|four=9509<sub>3</sub>|canj=心手一火 (PQMF)|ids=⿰[[忄]][[素]]}}
 
 # [[guileless]], [[sincere]], [[honest]]
 
