--- a/en/愫/愫.15678.wikitext
+++ b/en/愫/愫.15678.wikitext
@@ -10,12 +10,18 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|[[愫]]}}
 
-===Hanzi===
-{{yue-hanzi|jyut=sou3|y=sou3}}
-
-# {{defn|lang=yue|sort=心10}}
+===Pronunciation===
+{{zh-pron
+|m=sù
+|c=sou3
+|mc=
+|oc=
+|ma=
+|cat=a
+}}
 
 ----
 
@@ -28,15 +34,6 @@
 
 ====Readings====
 * {{ja-readings|on=[[そ]] (so)|kun=[[まこと]] (makoto)}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[sù]] ([[su4]])|wg=su<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=心10}}
 
 [[fr:愫]]
 [[li:愫]]
