--- a/en/愭/愭.15680.wikitext
+++ b/en/愭/愭.15680.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=10|sn=13|four=|canj=心十心日 (PJPA)}}
+{{Han char|rn=61|rad=心|as=10|sn=13|four=|canj=心十心日 (PJPA)|ids=⿰[[忄]][[耆]]}}
 
 # {{defn|Han|sort=心10}}
 
