--- a/en/愭/愭.15680.wikitext
+++ b/en/愭/愭.15680.wikitext
@@ -3,10 +3,11 @@
 ===Han character===
 {{Han char|rn=61|rad=心|as=10|sn=13|four=|canj=心十心日 (PJPA)|ids=⿰[[忄]][[耆]]}}
 
-# {{defn|Han|sort=心10}}
+# [[deferent]], [[show]] [[great]] [[respect]]
 
 ====References====
 * {{Han ref|kx=0396.150|dkj=10989|dj=0735.010|hdz=42335.140|uh=612D|ud=24877}}
+*[http://yedict.com/htm/61/612D.htm yedict.com (叶典)]
 
 ----
 
