--- a/en/愭/愭.15680.wikitext
+++ b/en/愭/愭.15680.wikitext
@@ -11,21 +11,30 @@
 
 ----
 
+==Chinese==
+{{zh-hanzi-box|[[愭]]}}
+
+===Pronunciation===
+{{zh-pron
+|m=qí,xùn
+|c=kei4
+|mc=y
+|oc=
+|ma=
+|cat=a
+}}
+
+====References====
+* (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 109]
+
+----
+
 ==Korean==
 
 ===Hanja===
 {{ko-hanja|hangeul=기|eumhun=|rv=gi|mr=ki|y=ki}}
 
 # {{defn|lang=ko|sort=心10}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[qí]] ([[qi2]]), [[xùn]] ([[xun4]])|wg=ch'i<sup>2</sup>, hsün<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=心10}}
 
 [[fr:愭]]
 [[pl:愭]]
