--- a/en/愮/愮.15681.wikitext
+++ b/en/愮/愮.15681.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=10|sn=13|four=9707<sub>2</sub>|canj=心月人山 (PBOU)}}
+{{Han char|rn=61|rad=心|as=10|sn=13|four=9707<sub>2</sub>|canj=心月人山 (PBOU)|ids=⿰[[忄]][[䍃]]}}
 
 # [[distressed]], [[agitated]]
 
