--- a/en/愮/愮.15681.wikitext
+++ b/en/愮/愮.15681.wikitext
@@ -10,12 +10,18 @@
 
 ----
 
-==Mandarin==
+==Chinese==
+{{zh-hanzi-box|[[愮]]}}
 
-===Hanzi===
-{{cmn-hanzi|pin=[[yáo]] ([[yao2]])|wg=yao<sup>2</sup>}}
-
-# {{defn|lang=cmn|sort=心10}}
+===Pronunciation===
+{{zh-pron
+|m=yáo
+|c=jiu4
+|mc=y
+|oc=y
+|ma=
+|cat=v,a
+}}
 
 [[fr:愮]]
 [[li:愮]]
