--- a/en/愯/愯.15682.wikitext
+++ b/en/愯/愯.15682.wikitext
@@ -10,12 +10,21 @@
 
 ----
 
-==Mandarin==
+==Chinese==
+{{zh-hanzi-box|[[愯]]}}
 
-===Hanzi===
-{{cmn-hanzi|pin=[[sǒng]] ([[song3]])|wg=sung<sup>3</sup>}}
+===Pronunciation===
+{{zh-pron
+|m=sǒng
+|c=sung2
+|mc=y
+|oc=y
+|ma=
+|cat=
+}}
 
-# {{defn|lang=cmn|sort=心10}}
+====References====
+* (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 109]
 
 [[fr:愯]]
 [[li:愯]]
