--- a/en/愰/愰.15683.wikitext
+++ b/en/愰/愰.15683.wikitext
@@ -12,12 +12,18 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|[[愰]]}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[jiu6]]|y=yiu6}}
-
-# {{defn|lang=yue|sort=心10}}
+===Pronunciation===
+{{zh-pron
+|m=huàng,huǎng
+|c=jiu6
+|mc=
+|oc=
+|ma=
+|cat=a,n
+}}
 
 ----
 
@@ -39,15 +45,6 @@
 {{ko-hanja|hangeul=황|eumhun=|rv=hwang|mr=hwang|y=hwang}}
 
 # {{defn|lang=ko|sort=心10}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[huǎng]] ([[huang3]])|wg=huang<sup>3</sup>}}
-
-# {{defn|lang=cmn|sort=心10}}
 
 [[fr:愰]]
 [[li:愰]]
