--- a/en/愱/愱.15684.wikitext
+++ b/en/愱/愱.15684.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=10|sn=13|four=|canj=心大人大 (PKOK)}}
+{{Han char|rn=61|rad=心|as=10|sn=13|four=|canj=心大人大 (PKOK)|ids=⿰[[忄]][[疾]]}}
 
 # {{defn|Han|sort=心10}}
 
