--- a/en/愱/愱.15684.wikitext
+++ b/en/愱/愱.15684.wikitext
@@ -10,6 +10,24 @@
 
 ----
 
+==Chinese==
+{{zh-hanzi-box|[[愱]]}}
+
+===Pronunciation===
+{{zh-pron
+|m=jí
+|c=zat6
+|mc=y
+|oc=y
+|ma=
+|cat=
+}}
+
+====References====
+* (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 109]
+
+----
+
 ==Japanese==
 
 ===Kanji===
@@ -19,15 +37,6 @@
 
 ====Readings====
 * {{ja-readings|on=[[しつ]] (shitsu), [[しち]] (shichi)|kun=[[くるしむ]] (kurushimu)}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[jí]] ([[ji2]])|wg=chi<sup>2</sup>}}
-
-# {{defn|lang=cmn|sort=心10}}
 
 [[fr:愱]]
 [[li:愱]]
