--- a/en/愲/愲.15685.wikitext
+++ b/en/愲/愲.15685.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=10|sn=13|four=9702<sub>7</sub>|canj=心月月月 (PBBB)}}
+{{Han char|rn=61|rad=心|as=10|sn=13|four=9702<sub>7</sub>|canj=心月月月 (PBBB)|ids=⿰[[忄]][[骨]]}}
 
 # {{defn|Han|sort=心10}}
 
