--- a/en/愲/愲.15685.wikitext
+++ b/en/愲/愲.15685.wikitext
@@ -10,21 +10,18 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|[[愲]]}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[gwat1]]|y=gwat1}}
-
-# {{defn|lang=yue|sort=心10}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[gǔ]] ([[gu3]])|wg=ku<sup>3</sup>}}
-
-# {{defn|lang=cmn|sort=心10}}
+===Pronunciation===
+{{zh-pron
+|m=gǔ
+|c=gwat1
+|mc=y
+|oc=y
+|ma=
+|cat=
+}}
 
 [[fr:愲]]
 [[li:愲]]
