--- a/en/愳/愳.15686.wikitext
+++ b/en/愳/愳.15686.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=10|sn=14|four=|canj=月山心 (BUP)}}
+{{Han char|rn=61|rad=心|as=10|sn=14|four=|canj=月山心 (BUP)|ids=⿱⿰[[目]]目[[心]]}}
 
 # {{defn|Han|sort=心10}}
 
