--- a/en/愳/愳.15686.wikitext
+++ b/en/愳/愳.15686.wikitext
@@ -10,12 +10,21 @@
 
 ----
 
-==Mandarin==
+==Chinese==
+{{zh-hanzi-box|[[愳]]}}
 
-===Hanzi===
-{{cmn-hanzi|pin=[[jù]] ([[ju4]])|wg=chü<sup>4</sup>}}
+===Pronunciation===
+{{zh-pron
+|m=jù
+|c=geoi6
+|mc=
+|oc=
+|ma=
+|cat=
+}}
 
-# {{defn|lang=cmn|sort=心10}}
+====References====
+* (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 109]
 
 [[fr:愳]]
 [[li:愳]]
