--- a/en/愴/愴.15687.wikitext
+++ b/en/愴/愴.15687.wikitext
@@ -14,12 +14,18 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|[[怆]]|愴}}
 
-===Hanzi===
-{{yue-hanzi|jyut=|y=chong3|sim=怆}}
-
-# {{defn|lang=yue|sort=心10}}
+===Pronunciation===
+{{zh-pron
+|m=chuàng
+|c=cong3
+|mc=y
+|oc=y
+|ma=
+|cat=a
+}}
 
 ----
 
@@ -41,23 +47,6 @@
 {{ko-hanja|hangeul=창|eumhun=|rv=chang|mr=ch'ang|y=chang}}
 
 # {{defn|lang=ko|sort=心10}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|sim=怆|pin=[[chuàng]] ([[chuang4]])|wg=ch'uang<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=心10}}
-----
-
-==Middle Chinese==
-
-===Han character===
-'''愴''' (*chriɑ̀ng)
-
-# {{defn|lang=ltc|sort=心10}}
 
 [[fr:愴]]
 [[li:愴]]
