--- a/en/愵/愵.15688.wikitext
+++ b/en/愵/愵.15688.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=10|sn=13|four=|canj=心弓一一 (PNMM)}}
+{{Han char|rn=61|rad=心|as=10|sn=13|four=|canj=心弓一一 (PNMM)|ids=⿰[[忄]][[弱]]}}
 
 # {{defn|Han|sort=心10}}
 
