--- a/en/愵/愵.15688.wikitext
+++ b/en/愵/愵.15688.wikitext
@@ -10,6 +10,24 @@
 
 ----
 
+==Chinese==
+{{zh-hanzi-box|[[愵]]}}
+
+===Pronunciation===
+{{zh-pron
+|m=nì
+|c=nik6,lik6
+|mc=y
+|oc=y
+|ma=
+|cat=
+}}
+
+====References====
+* (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 109]
+
+----
+
 ==Japanese==
 
 ===Kanji===
@@ -19,15 +37,6 @@
 
 ====Readings====
 * {{ja-readings|on=[[でき]] (deki), [[にゃく]] (nyaku)|kun=[[うれえるさま]] (ureerusama)}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[nì]] ([[ni4]])|wg=ni<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=心10}}
 
 [[fr:愵]]
 [[li:愵]]
