--- a/en/愶/愶.15689.wikitext
+++ b/en/愶/愶.15689.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=10|sn=13|four=9402<sub>7</sub>|canj=心大尸月 (PKSB)}}
+{{Han char|rn=61|rad=心|as=10|sn=13|four=9402<sub>7</sub>|canj=心大尸月 (PKSB)|ids=⿰[[忄]][[脅]]}}
 
 # {{defn|Han|sort=心10}}
 
