--- a/en/愶/愶.15689.wikitext
+++ b/en/愶/愶.15689.wikitext
@@ -10,6 +10,24 @@
 
 ----
 
+==Chinese==
+{{zh-hanzi-box|[[愶]]}}
+
+===Pronunciation===
+{{zh-pron
+|m=xié
+|c=hip3
+|mc=y
+|oc=y
+|ma=
+|cat=
+}}
+
+====References====
+* (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 109]
+
+----
+
 ==Japanese==
 
 ===Kanji===
@@ -19,15 +37,6 @@
 
 ====Readings====
 * {{ja-readings|on=[[きょう]] (kyō), [[こう]] (kō)|kun=[[おびやかす]] (obiyakasu)}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[xié]] ([[xie2]])|wg=hsieh<sup>2</sup>}}
-
-# {{defn|lang=cmn|sort=心10}}
 
 [[fr:愶]]
 [[li:愶]]
