--- a/en/愸/愸.15691.wikitext
+++ b/en/愸/愸.15691.wikitext
@@ -10,12 +10,21 @@
 
 ----
 
-==Mandarin==
+==Chinese==
+{{zh-hanzi-box|[[木]]}}
 
-===Hanzi===
-{{cmn-hanzi|pin=[[zhěng]] ([[zheng3]])|wg=cheng<sup>3</sup>}}
+===Pronunciation===
+{{zh-pron
+|m=zhěng
+|c=zing2
+|mc=
+|oc=
+|ma=
+|cat=
+}}
 
-# {{defn|lang=cmn|sort=心10}}
+====References====
+* (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 109]
 
 [[fr:愸]]
 [[li:愸]]
