--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -159,6 +159,7 @@ From {{etyl|enm|en}} {{term|souken|souken, suken||lang=enm}}, from {{etyl|ang|en
 * Norwegian: {{t|no|suge}}
 * Portuguese: {{t+|pt|saco}}
 * Russian: {{t+|ru|отстой|tr=otstój|sc=Cyrl}} {{qualifier|noun}}
+* Spanish: {{t|es|ser un asco}}, {{t|es|dar asco}}
 * Swedish: {{t+|sv|suga}}
 {{trans-bottom}}
 
