--- a/en/愹/愹.15692.wikitext
+++ b/en/愹/愹.15692.wikitext
@@ -10,6 +10,24 @@
 
 ----
 
+==Chinese==
+{{zh-hanzi-box|[[愹]]}}
+
+===Pronunciation===
+{{zh-pron
+|m=yǒng
+|c=jung5
+|mc=
+|oc=
+|ma=
+|cat=
+}}
+
+====References====
+* (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 109]
+
+----
+
 ==Japanese==
 
 ===Kanji===
@@ -19,15 +37,6 @@
 
 ====Readings====
 * {{ja-readings|on=[[よう]] (yō)|kun=[[いかる]] (ikaru), [[よろこぶ]] (yorokobu), [[みちる]] (michiru)}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[yǒng]] ([[yong3]])|wg=yung<sup>3</sup>}}
-
-# {{defn|lang=cmn|sort=心10}}
 
 [[fr:愹]]
 [[li:愹]]
