--- a/en/愺/愺.15693.wikitext
+++ b/en/愺/愺.15693.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=10|sn=13|four=|canj=心廿日十 (PTAJ)}}
+{{Han char|rn=61|rad=心|as=10|sn=13|four=|canj=心廿日十 (PTAJ)|ids=⿰[[忄]][[草]]}}
 
 # {{defn|Han|sort=心10}}
 
