--- a/en/愺/愺.15693.wikitext
+++ b/en/愺/愺.15693.wikitext
@@ -10,12 +10,21 @@
 
 ----
 
-==Mandarin==
+==Chinese==
+{{zh-hanzi-box|[[愺]]}}
 
-===Hanzi===
-{{cmn-hanzi|pin=[[cǎo]] ([[cao3]])|wg=ts'ao<sup>3</sup>}}
+===Pronunciation===
+{{zh-pron
+|m=cǎo
+|c=cou2
+|mc=y
+|oc=y
+|ma=
+|cat=
+}}
 
-# {{defn|lang=cmn|sort=心10}}
+====References====
+* (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 109]
 
 [[fr:愺]]
 [[li:愺]]
