--- a/en/愻/愻.15694.wikitext
+++ b/en/愻/愻.15694.wikitext
@@ -13,7 +13,7 @@
 ==Mandarin==
 
 ===Hanzi===
-{{cmn-hanzi|pin=[[sùn]] ([[sun4]])|wg=sun<sup>4</sup>}}
+{{cmn-hanzi|pin=[[xùn]] ([[xun4]])|wg=hsün<sup>4</sup>}}
 
 # {{defn|lang=cmn|sort=心10}}
 
