--- a/en/愻/愻.15694.wikitext
+++ b/en/愻/愻.15694.wikitext
@@ -3,7 +3,8 @@
 ===Han character===
 {{Han char|rn=61|rad=心|as=10|sn=14|four=1233<sub>3</sub>|canj=弓火心 (NFP)|ids=⿱[[孫]][[心]]}}
 
-# {{defn|Han|sort=心10}}
+# to [[yield]], [[accord]]
+# [[humble]], [[modest]]
 
 ====References====
 * {{Han ref|kx=0396.460|dkj=11023|dj=0735.330|hdz=42335.050|uh=613B|ud=24891|bh=E1D2|bd=57810}}
