--- a/en/愼/愼.15695.wikitext
+++ b/en/愼/愼.15695.wikitext
@@ -2,7 +2,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=10|sn=13|four=|canj=心心月金 (PPBC)}}
+{{Han char|rn=61|rad=心|as=10|sn=13|four=|canj=心心月金 (PPBC)|ids=⿰[[忄]][[眞]]}}
 
 # [[act]] with [[care]], be [[cautious]]
 
