--- a/en/愼/愼.15695.wikitext
+++ b/en/愼/愼.15695.wikitext
@@ -11,6 +11,21 @@
 
 ----
 
+==Chinese==
+{{zh-hanzi-box|[[愼]]}}
+
+===Pronunciation===
+{{zh-pron
+|m=shèn
+|c=san6
+|mc=y
+|oc=
+|ma=
+|cat=
+}}
+
+----
+
 ==Japanese==
 
 ===Kanji===
@@ -29,15 +44,6 @@
 {{ko-hanja|hangeul=신|eumhun=|rv=sin|mr=sin|y=sin}}
 
 # {{defn|lang=ko|sort=心10}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[cǎo]] ([[cao3]]), [[shèn]] ([[shen4]])|wg=ts'ao<sup>3</sup>, shen<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=心10}}
 
 [[fr:愼]]
 [[ko:愼]]
