--- a/en/愽/愽.15696.wikitext
+++ b/en/愽/愽.15696.wikitext
@@ -5,9 +5,9 @@
 {{Han compound|心|尃|c1=s|c2=p|t1=heart|ls=psc}}
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=10|sn=13|four=|canj=心戈月戈 (PIBI)}}
+{{Han char|rn=61|rad=心|as=10|sn=13|four=|canj=心戈月戈 (PIBI)|ids=⿰[[忄]][[尃]]}}
 
-# gamble, play games
+# [[gamble]], [[play]] [[game]]s
 # [[wide]], [[broad]]
 
 ====References====
