--- a/en/愽/愽.15696.wikitext
+++ b/en/愽/愽.15696.wikitext
@@ -15,6 +15,24 @@
 
 ----
 
+==Chinese==
+{{zh-hanzi-box|[[愽]]}}
+
+===Pronunciation===
+{{zh-pron
+|m=bó
+|c=bok3
+|mc=
+|oc=
+|ma=
+|cat=v,a
+}}
+
+====References====
+* (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 109]
+
+----
+
 ==Japanese==
 
 ===Kanji===
@@ -24,15 +42,6 @@
 
 ====Readings====
 * {{ja-readings|on=[[はく]] (haku)|kun=[[ひろい]] (hiroi), [[ひろめる]] (hiromeru)}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[bó]] ([[bo2]])|wg=po<sup>2</sup>}}
-
-# {{defn|lang=cmn|sort=心10}}
 
 [[fr:愽]]
 [[li:愽]]
