--- a/en/愾/愾.15697.wikitext
+++ b/en/愾/愾.15697.wikitext
@@ -2,7 +2,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=10|sn=13|four=9801<sub>7</sub>|canj=心人弓木 (POND)}}
+{{Han char|rn=61|rad=心|as=10|sn=13|four=9801<sub>7</sub>|canj=心人弓木 (POND)|ids=⿰[[忄]][[氣]]}}
 
 # [[anger]], [[wrath]], [[hatred]], [[enmity]]
 
