--- a/en/愾/愾.15697.wikitext
+++ b/en/愾/愾.15697.wikitext
@@ -11,12 +11,18 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|[[忾]]|愾}}
 
-===Hanzi===
-{{yue-hanzi|jyut=koi3|y=koi3|sim=忾}}
-
-# {{defn|lang=yue|sort=心10}}
+===Pronunciation===
+{{zh-pron
+|m=kài
+|c=koi3
+|mc=y
+|oc=y
+|ma=
+|cat=n
+}}
 
 ----
 
@@ -38,15 +44,6 @@
 {{ko-hanja|hangeul=[[개]], [[희]]|eumhun=|rv=gae, hui|mr=kae, hŭi|y=kay, huy}}
 
 # {{defn|lang=ko|sort=心10}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|sim=忾|pin=[[kài]] ([[kai4]])|wg=k'ai<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=心10}}
 
 [[fr:愾]]
 [[ko:愾]]
