--- a/en/慀/慀.15699.wikitext
+++ b/en/慀/慀.15699.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=10|sn=13|four=9203<sub>4</sub>|canj=心月女大 (PBVK)}}
+{{Han char|rn=61|rad=心|as=10|sn=13|four=9203<sub>4</sub>|canj=心月女大 (PBVK)|ids=⿰[[忄]][[奚]]}}
 
 # {{rfdef|lang=cmn}}
 
