--- a/en/慁/慁.15700.wikitext
+++ b/en/慁/慁.15700.wikitext
@@ -11,12 +11,18 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|[[慁]]}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[wan6]]|y=wan6}}
-
-# {{defn|lang=yue|sort=心10}}
+===Pronunciation===
+{{zh-pron
+|m=hùn
+|c=wan6
+|mc=y
+|oc=y
+|ma=
+|cat=v
+}}
 
 ----
 
@@ -29,15 +35,6 @@
 
 ====Readings====
 * {{ja-readings|on=[[こん]] (kon), [[ごん]] (gon)|kun=[[うれえる]] (ureeru)}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[hùn]] ([[hun4]])|wg=hun<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=心10}}
 
 [[fr:慁]]
 [[li:慁]]
