--- a/en/慂/慂.15701.wikitext
+++ b/en/慂/慂.15701.wikitext
@@ -11,6 +11,21 @@
 
 ----
 
+==Chinese==
+{{zh-hanzi-box|[[慂]]}}
+
+===Pronunciation===
+{{zh-pron
+|m=yǒng
+|c=jung5
+|mc=y
+|oc=y
+|ma=
+|cat=v
+}}
+
+----
+
 ==Japanese==
 
 ===Kanji===
@@ -29,15 +44,6 @@
 {{ko-hanja|hangeul=용|eumhun=|rv=yong|mr=yong|y=yong}}
 
 # {{defn|lang=ko|sort=心10}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[yǒng]] ([[yong3]])|wg=yung<sup>3</sup>}}
-
-# {{defn|lang=cmn|sort=心10}}
 
 [[fr:慂]]
 [[li:慂]]
