--- a/en/慃/慃.15702.wikitext
+++ b/en/慃/慃.15702.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=10|sn=13|four=|canj=心金戈一 (PCIM)}}
+{{Han char|rn=61|rad=心|as=10|sn=13|four=|canj=心金戈一 (PCIM)|ids=⿰[[忄]][[翁]]}}
 
 # {{defn|Han|sort=心10}}
 
