--- a/en/慄/慄.15703.wikitext
+++ b/en/慄/慄.15703.wikitext
@@ -12,12 +12,18 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|[[栗]]|慄}}
 
-===Hanzi===
-{{yue-hanzi|jyut=|y=leut6|sim=栗}}
-
-# {{defn|lang=yue|sort=心10}}
+===Pronunciation===
+{{zh-pron
+|m=lì
+|c=leot6
+|mc=y
+|oc=y
+|ma=
+|cat=v
+}}
 
 ----
 
@@ -41,15 +47,6 @@
 # {{defn|lang=ko|sort=心10}}
 
 [[Category:CJKV simplified characters which already existed as traditional characters|心栗]]
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|sim=栗|pin=[[lì]] ([[li4]])|wg=li<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=心10}}
 
 [[fr:慄]]
 [[li:慄]]
