--- a/en/慅/慅.15704.wikitext
+++ b/en/慅/慅.15704.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=10|sn=13|four=9703<sub>6</sub>|canj=心水戈戈 (PEII)}}
+{{Han char|rn=61|rad=心|as=10|sn=13|four=9703<sub>6</sub>|canj=心水戈戈 (PEII)|ids=⿰[[忄]][[蚤]]}}
 
 # [[agitated]]
 
