--- a/en/慆/慆.15705.wikitext
+++ b/en/慆/慆.15705.wikitext
@@ -11,12 +11,18 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|[[慆]]}}
 
-===Hanzi===
-{{yue-hanzi|jyut=|y=tou1}}
-
-# {{defn|lang=yue|sort=心10}}
+===Pronunciation===
+{{zh-pron
+|m=tāo,qiè
+|c=tou1
+|mc=y
+|oc=y
+|ma=
+|cat=a,v
+}}
 
 ----
 
@@ -38,15 +44,6 @@
 {{ko-hanja|hangeul=도|eumhun=|rv=do|mr=to|y=to}}
 
 # {{defn|lang=ko|sort=心10}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[qiè]] ([[qie4]]), [[tāo]] ([[tao1]])|wg=ch'ieh<sup>4</sup>, t'ao<sup>1</sup>}}
-
-# {{defn|lang=cmn|sort=心10}}
 
 [[fr:慆]]
 [[li:慆]]
