--- a/en/慇/慇.15706.wikitext
+++ b/en/慇/慇.15706.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=10|sn=14|four=7733<sub>4</sub>|canj=竹水心 (HEP)}}
+{{Han char|rn=61|rad=心|as=10|sn=14|four=7733<sub>4</sub>|canj=竹水心 (HEP)|ids=⿱[[殷]][[心]]}}
 
 # [[careful]], [[anxious]], [[attentive]]
 
