--- a/en/慇/慇.15706.wikitext
+++ b/en/慇/慇.15706.wikitext
@@ -10,12 +10,18 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|[[慇]]}}
 
-===Hanzi===
-{{yue-hanzi|jyut=|y=yan1}}
-
-# {{defn|lang=yue|sort=心10}}
+===Pronunciation===
+{{zh-pron
+|m=yīn
+|c=jan1
+|mc=y
+|oc=y
+|ma=
+|cat=a
+}}
 
 ----
 
@@ -37,15 +43,6 @@
 {{ko-hanja|hangeul=은|eumhun=|rv=eun|mr=ŭn|y=un}}
 
 # {{defn|lang=ko|sort=心10}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[yīn]] ([[yin1]])|wg=yin<sup>1</sup>}}
-
-# {{defn|lang=cmn|sort=心10}}
 
 ----
 
