--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -89,6 +89,8 @@ i.e. differs from [[viz.]] in that what follows merely restates what was said in
 
 # [[id est]] (that is; in other words)
 
+# [[i.e.]] (es decir; (phrase) that is to say, (adverb) ergo, scilicet, namely, )
+
 [[bg:i.e.]]
 [[cs:i.e.]]
 [[de:i.e.]]
