--- a/en/垚/垚.13086.wikitext
+++ b/en/垚/垚.13086.wikitext
@@ -13,12 +13,18 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|[[垚]]}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[jiu1]], [[jiu4]]|y=yiu1, yiu4}}
-
-# {{defn|lang=yue|sort=土06}}
+===Pronunciation===
+{{zh-pron
+|m=yáo
+|c=jiu1,jiu4
+|mc=y
+|oc=y
+|ma=
+|cat=n
+}}
 
 ----
 
@@ -40,15 +46,6 @@
 {{ko-hanja|hangeul=요|eumhun=|rv=yo|mr=yo|y=yo}}
 
 # {{defn|lang=ko|sort=土06}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[yáo]] ([[yao2]])|wg=yao<sup>2</sup>}}
-
-# {{defn|lang=cmn|sort=土06}}
 
 [[fr:垚]]
 [[li:垚]]
