--- a/en/旨/旨.16912.wikitext
+++ b/en/旨/旨.16912.wikitext
@@ -16,12 +16,18 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|[[旨]]}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[zi2]]|y=ji2}}
-
-# {{defn|lang=yue|sort=日02}}
+===Pronunciation===
+{{zh-pron
+|m=zhǐ
+|c=zi2
+|mc=y
+|oc=y
+|ma=
+|cat=n,a
+}}
 
 ----
 
@@ -46,15 +52,6 @@
 {{ko-hanja|hangeul=지|eumhun=|rv=ji|mr=chi|y=ci}}
 
 # {{defn|lang=ko|sort=日02}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[zhǐ]] ([[zhi3]])|wg=chih<sup>3</sup>}}
-
-# {{defn|lang=cmn|sort=日02}}
 
 ----
 
