--- a/en/既/既.16907.wikitext
+++ b/en/既/既.16907.wikitext
@@ -18,12 +18,23 @@ Note the stroke order in the right component 旡, which may not be clear in the 
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|[[既]]}}
 
-===Hanzi===
-{{yue-hanzi|jyut=|y=gei3}}
+===Pronunciation===
+{{zh-pron
+|m=jì
+|c=gei3
+|mc=
+|oc=y
+|ma=
+|cat=adv,a,prep
+}}
 
-# {{defn|lang=yue|sort=无05}}
+===Examples===
+#: 耶和华神对蛇说，你既作了这事，就必受咒诅，比一切的牲畜野兽更甚。你必用肚子行走，终身吃土。
+#: Yēhéhuá shén duì shé shuō , nǐ jì zuò le zhè shì , jiù bì shòu zhòuzǔ , bǐ yīqiè de shēngchù yĕshòu gèng shén . nǐ bì yòng dùzi xíng zǒu , zhōng shēn chī tǔ . 
+#:: And the LORD God said unto the serpent, Because thou hast done this, thou art cursed above all cattle, and above every beast of the field; upon thy belly shalt thou go, and dust shalt thou eat all the days of thy life: 
 
 ----
 
@@ -45,18 +56,6 @@ Note the stroke order in the right component 旡, which may not be clear in the 
 {{ko-hanja|hangeul=기|eumhun=|rv=gi|mr=ki|y=ki}}
 
 # {{defn|lang=ko|sort=无05}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[jì]] ([[ji4]])|wg=chi<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=无05}}
-#: 耶和华神对蛇说，你既作了这事，就必受咒诅，比一切的牲畜野兽更甚。你必用肚子行走，终身吃土。
-#: Yēhéhuá shén duì shé shuō , nǐ jì zuò le zhè shì , jiù bì shòu zhòuzǔ , bǐ yīqiè de shēngchù yĕshòu gèng shén . nǐ bì yòng dùzi xíng zǒu , zhōng shēn chī tǔ . 
-#:: And the LORD God said unto the serpent, Because thou hast done this, thou art cursed above all cattle, and above every beast of the field; upon thy belly shalt thou go, and dust shalt thou eat all the days of thy life: 
 
 ----
 
