--- a/en/慉/慉.15708.wikitext
+++ b/en/慉/慉.15708.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=10|sn=13|four=9006<sub>3</sub>|canj=心卜女田 (PYVW)}}
+{{Han char|rn=61|rad=心|as=10|sn=13|four=9006<sub>3</sub>|canj=心卜女田 (PYVW)|ids=⿰[[忄]][[畜]]}}
 
 # to [[bring up]]
 # to [[raise]]
