--- a/en/慊/慊.15709.wikitext
+++ b/en/慊/慊.15709.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=10|sn=13|four=9803<sub>7</sub>|canj=心廿X金 (PTXC)}}
+{{Han char|rn=61|rad=心|as=10|sn=13|four=9803<sub>7</sub>|canj=心廿X金 (PTXC)|ids=⿰[[忄]][[兼]]}}
 
 # to [[resent]]
 # [[contended]]
