--- a/en/慊/慊.15709.wikitext
+++ b/en/慊/慊.15709.wikitext
@@ -12,12 +12,18 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|[[慊]]}}
 
-===Hanzi===
-{{yue-hanzi|jyut=|y=him3, hip3}}
-
-# {{defn|lang=yue|sort=心10}}
+===Pronunciation===
+{{zh-pron
+|m=qiàn
+|c=him3,hip3
+|mc=y
+|oc=y
+|ma=
+|cat=v
+}}
 
 ----
 
@@ -39,15 +45,6 @@
 {{ko-hanja|hangeul=[[겸]], [[협]]|eumhun=|rv=gyeom, hyeop|mr=kyŏm, hyŏp|y=kyem, hyep}}
 
 # {{defn|lang=ko|sort=心10}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[qiàn]] ([[qian4]])|wg=ch'ien<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=心10}}
 
 [[fr:慊]]
 [[ko:慊]]
