--- a/en/慏/慏.15715.wikitext
+++ b/en/慏/慏.15715.wikitext
@@ -10,12 +10,21 @@
 
 ----
 
-==Mandarin==
+==Chinese==
+{{zh-hanzi-box|[[慏]]}}
 
-===Hanzi===
-{{cmn-hanzi|pin=[[mǐng]] ([[ming3]])|wg=ming<sup>3</sup>}}
+===Pronunciation===
+{{zh-pron
+|m=mǐng
+|c=ming5
+|mc=y
+|oc=y
+|ma=
+|cat=
+}}
 
-# {{defn|lang=cmn|sort=心10}}
+====References====
+*(''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 109]
 
 [[fr:慏]]
 [[li:慏]]
