--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -55,6 +55,7 @@ Supposed by some to derive from {{etyl|gd|en}} {{term|stob||to prick, to prod, t
 * Dutch: {{t|nl|steekwond}}
 * Finnish: {{t|fi|pistohaava}}
 * Galician: {{t|gl|puñalada|f}}
+* German: {{t+|de|Stichwunde|f}}
 * Italian: {{t+|it|coltellata|f}}, {{t+|it|pugnalata|f}}
 {{trans-mid}}
 * Norwegian: {{t|no|stikk|n}}
