--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -26,7 +26,7 @@ From {{etyl|ang|en}} {{m|ang|plÅ«me}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*prÅ
 # {{context|slang|usually in plural|lang=en}} A [[testicle]].
 # The edible, fleshy stone fruit of several species sharing {{taxlink|Prunus subg. Prunus|subgenus|noshow=1}} with ''Prunus domestica'' including, among others:
 ## {{taxlink|Prunus sect. Prunus|section|noshow=1}}
-### {{taxlink|Prunus cerasifera|species|noshow=1}} the [[cherry plum]] or [[myrobalan]]
+### ''[[Prunus cerasifera]]'', the [[cherry plum]] or [[myrobalan]]
 ### {{taxlink|Prunus salicina|species|noshow=1}} the [[Chinese plum]] or {{vern|Japanese plum|pedia=1}}
 ### ''[[Prunus spinosa]]'', the [[sloe]]
 ### {{taxlink|Prunus ursina|species|noshow=1}} the {{vern|bear's plum|pedia=1}}
