--- a/en/慐/慐.15716.wikitext
+++ b/en/慐/慐.15716.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=10|sn=14|four=|canj=一月金心 (MBCP)}}
+{{Han char|rn=61|rad=心|as=10|sn=14|four=|canj=一月金心 (MBCP)|ids=⿱[[貢]][[心]]}}
 
 # {{defn|Han|sort=心10}}
 
